--- a/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
@@ -224,6 +224,10 @@
                     @Herramientas.Idiomas.CogerCadena(idioma, "Account", "Header")
                 </button>
 
+                <button @onclick="@(e => AbrirRecompensas(e))" class="texto-cabecera menu-dropdown-item" style="text-align: left; border: 0; width: 100%; font-size: 14px;">
+                    @Herramientas.Idiomas.CogerCadena(idioma, "Rewards", "Header")
+                </button>
+
                 <button @onclick="@(e => Desconectar(e))" class="texto-cabecera menu-dropdown-item" style="text-align: left; border: 0; width: 100%; font-size: 14px;">
                     @Herramientas.Idiomas.CogerCadena(idioma, "Logout", "Header")
                 </button>
@@ -592,6 +596,11 @@ else
     private void AbrirCuenta(MouseEventArgs e)
     {
         NavManager.NavigateTo("/account/", true);
+    }
+
+    private void AbrirRecompensas(MouseEventArgs e)
+    {
+        NavManager.NavigateTo("/account/rewards/", true);
     }
 }
 
