--- a/pepeizqs deals web/Pages/Account/ResetPassword.cshtml
+++ b/pepeizqs deals web/Pages/Account/ResetPassword.cshtml
@@ -2,6 +2,7 @@
 @model pepeizqs_deals_web.Pages.Account.ResetPasswordModel
 @{
     ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "String1", "ResetPassword");
+    Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
 @(await Html.RenderComponentAsync<Componentes.Cuenta.ContrasenaResetear>(RenderMode.ServerPrerendered, new { 
